refactor: improve UI
- basically make it 2x time bigger
- and the 4 question queries become a dropdown